Refatoranco a classe AlarmClock e sua classe de teste.